reorganized routing, fixed z-indexing for dropdown

--- a/bookkeeping-app/src/components/elements/dropdowns/AccountDropdown.module.css
+++ b/bookkeeping-app/src/components/elements/dropdowns/AccountDropdown.module.css
@@ -51,6 +51,7 @@
 
     display: flex;
     flex-direction: column;
+    z-index: 15;
 
     position: absolute;
     top: calc(2rem);
@@ -92,14 +93,14 @@
     background-color: var(--border-color);
 }
 
-.clientListing {
+.accountListing {
     overflow-y: scroll;
 
     display: flex;
     flex-direction: column;
 }
 
-.clientListing > p {
+.accountListing > p {
     padding: 0.25rem 0.5rem;
 
     font-size: var(--small-font-size);
@@ -109,7 +110,7 @@
     transition: all 0.25s ease;
 }
 
-.clientListing > p:hover {
+.accountListing > p:hover {
     background-color: var(--hover-color);
     text-decoration: underline;
 }
